--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "build": "gulp",
-    "test": "gulp test"
+    "watch": "gulp watch"
   },
   "devDependencies": {
     "gulp": "^5.0.0",
