--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: BareCSS
-description: Minimal CSS framework for a clean layout.
+description: Minimal CSS framework for a clean interface.
 
 remote_theme: techie-joe/mallet
 remote_theme_build_revision: 5a931b348341d49384d42974e8cef2fcb33bafca
